force-app/main/default/objects/Related_User__c/Related_User__c.object-meta.xml
<CustomObject>
    <description>Junction object which connects contacts with Circle Mints Or Developer Accounts</description>
    <label>Related User</label>
    <nameField>
        <label>Related User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>