force-app/main/default/objects/Related_User__c/fields/Circle_Mint__c.field-meta.xml
<CustomField>
    <fullName>Circle_Mint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Related Circle Mint</description>
    <inlineHelpText>The Related Circle Mint</inlineHelpText>
    <label>Circle Mint</label>
    <referenceTo>Circle_Account__c</referenceTo>
    <relationshipLabel>Related Users</relationshipLabel>
    <relationshipName>Related_Users</relationshipName>
    <type>Lookup</type>
</CustomField>