force-app/main/default/objects/Related_User__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Related Contact</description>
    <inlineHelpText>The Related Contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Users (Developer Account)</relationshipLabel>
    <relationshipName>Related_Users</relationshipName>
    <type>Lookup</type>
</CustomField>