force-app/main/default/objects/Related_User__c/fields/Contact_Developer_Account_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Developer_Account_Entity_ID__c</fullName>
    <formula>IF(!ISBLANK(Contact__c),Contact__r.Developer_Account_Entity_ID__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Developer Account Entity ID</label>
    <type>Text</type>
</CustomField>