force-app/main/default/objects/Related_User__c/fields/Developer_Account__c.field-meta.xml
<CustomField>
    <fullName>Developer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Related Developer Account</description>
    <inlineHelpText>The Related Developer Account</inlineHelpText>
    <label>Developer Account</label>
    <referenceTo>Developer_Account__c</referenceTo>
    <relationshipLabel>Related Users</relationshipLabel>
    <relationshipName>Related_Users</relationshipName>
    <type>Lookup</type>
</CustomField>