force-app/main/default/objects/Related_User__c/fields/Developer_Account_Authorized_User__c.field-meta.xml
<CustomField>
    <fullName>Developer_Account_Authorized_User__c</fullName>
    <formula>IF(!ISBLANK(Contact__c),TEXT(Contact__r.Dev_Account_Authorized_User__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Developer Account Authorized User</label>
    <type>Text</type>
</CustomField>