force-app/main/default/objects/Related_User__c/fields/Developer_Account_Onboarding_Initiator__c.field-meta.xml
<CustomField>
    <fullName>Developer_Account_Onboarding_Initiator__c</fullName>
    <formula>IF(!ISBLANK(Contact__c), TEXT(Contact__r.Dev_Account_Onboarding_Initiator__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Developer Account Onboarding Initiator</label>
    <type>Text</type>
</CustomField>