force-app/main/default/objects/Related_User__c/fields/Developer_Account_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Developer_Account_User_ID__c</fullName>
    <formula>IF(!ISBLANK(Contact__c), Contact__r.User_ID_DA__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Developer Account User ID</label>
    <type>Text</type>
</CustomField>